fixed credits visibility

--- a/style.css
+++ b/style.css
@@ -3,14 +3,15 @@
 /* DECLARE VARIABLES */
 
 :root {
-    --formBg-color: rgb(188,170,170);
-    --font-color: white;
-    --form-color: rgb(119,138,171);
+    --formBg-color: #A9D6E5;
+    --font-color: black;
+    --form-color: #19747E;
     --highlight-color: rgba(0, 54, 117, 0.8);
     --bg-color: black;
     --error-color: rgba(159, 1, 3, 0.8);
     --left-side-width: 40vw;
     --font-size: 1rem;
+    --mint-green: #D1E8E2;
 }
 
 /* RESET AND SET BASE STYLING */
@@ -64,7 +65,7 @@ body {
 }
 
 .companyName, sup{
-    color: var(--font-color);
+    color: var(--mint-green);
 }
 
 .logo {
@@ -78,7 +79,8 @@ body {
     height: auto;
     position: relative;
     top: 80vh;
-    color: var(--font-color)
+    color: var(--mint-green);
+    background-color: rgba(0, 0, 0, 0.6)
 }
 
 /* FORM RIGHT SIDE */
@@ -119,6 +121,7 @@ body {
     font-size: calc(var(--font-size) * 0.8);
     text-transform: uppercase;
     opacity: 60%;
+    padding-left: 2vw;
 }
 
 input {
